<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/weather_header">
        <ListPreference
            app:defaultValue="Kelvin"
            app:entries="@array/units_entries"
            app:entryValues="@array/units_values"
            app:key="temp_unit"
            app:title="@string/temp_unit_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="meter/second"
            app:entries="@array/wind_entries"
            app:entryValues="@array/wind_values"
            app:key="wind_unit"
            app:title="@string/wind_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="GPS"
            app:entries="@array/location_entries"
            app:entryValues="@array/location_values"
            app:key="location_unit"
            app:title="@string/location_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/app_header">
        <ListPreference
            app:defaultValue="en"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:key="language"
            app:title="@string/language_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="mode"
            app:title="@string/dark_mode_title" />

        <SwitchPreferenceCompat
            app:key="notification"
            app:title="@string/notification_title" />

    </PreferenceCategory>

</PreferenceScreen>